# astro

./: .env.example  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yaml
api/: alembic.ini  api.py  cli.py  entrypoint.sh  requirements.txt  settings.py
api/cli/src/: routers.py  users.py
api/cli/templates/: router.py.j2
api/lib/agent/: __init__.py  enums.py  models.py  prompts.py
api/lib/auth/: auth.py  models.py
api/lib/credentials/: __init__.py
api/lib/file/: __init__.py  request.py  storage.py
api/lib/llm/: __init__.py  bedrock.py  enums.py  limiter.py  models.py
api/lib/message/: __init__.py  models.py
api/lib/security/: network.py
api/lib/stack/: models.py  recurrence.py  runner.py  schedule.py  streambus.py
api/lib/tool/: __init__.py  access.py  enums.py  http.py  logical.py  mcp.py  models.py  resolver.py  service.py
api/migrations/: env.py
api/migrations/versions/: 6217818b6c73_unique_message_stack_position.py  cf70fc8772ac_baseline_schema.py  dcfb1ad406a2_memory_require_stack_id.py
api/specs/: spec_base.md
api/src/celery/: __init__.py  (+1 more)
client/: README.md  pyproject.toml
client/lib/: __init__.py  auth.py  banner.py  color.py  config.py  stack.py  tools.py  wizard.py
client/src/: __init__.py  astro.py
client/src/commands/: agent.py  auth.py  config.py  docs.py  init.py  llm.py  stack.py  tool.py
client/src/tui/: stack_exec.py  theme.py
docs/: CODE-REVIEW.md  FORK-CHANGES.md
tests/: test_security_helpers.py
tools/: api.py  entrypoint.sh  requirements.txt
tools/lib/: context.py  models.py  security.py  tool.py
(+34 files in other folders)
